virt01/deprecated/wyze-bridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wyze-api-svc
  labels:
    app: wbridge
  annotations:
    metallb.io/address-pool: vlan1000-apps
    external-dns.alpha.kubernetes.io/hostname: wbridge-api.k3s.nf.lab
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    - port: 1935
      protocol: TCP
      name: rtmp-svc-port
    - port: 8554
      protocol: TCP
      name: rtsp-svc-port
    - port: 8888
      protocol: TCP
      name: hls-svc-port
    - port: 8889
      protocol: TCP
      name: webrtc-svc-port
    - port: 8189
      protocol: UDP
      name: webrtc-ice-svc-port
  selector:
    app: wbridge
---
apiVersion: v1
kind: Service
metadata:
  name: wyze-ui-svc
  labels:
    app: wbridge
spec:
  ports:
    - port: 5000
      protocol: TCP
      name: webui-svc-port
  selector:
    app: wbridge
